--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@
     <title>Kata Calculator</title>
 </head>
 <body>
-    
+    <div id="app">
+    </div>
 
     <script lang="javascript" src="application.js"></script>
+    <script>
+
+        
+
+        let app = new Application('app');
+
+
+    </script>
 </body>
 </html>
