proceso de explicacion

--- a/index.html
+++ b/index.html
@@ -7,15 +7,22 @@
     <title>Kata Calculator</title>
 </head>
 <body>
-    <div id="app">
+    <div id="c1" class="calculator">
+
     </div>
 
-    <script lang="javascript" src="application.js"></script>
+    <div id="c2">
+
+    </div>
+
+
+    <script lang="javascript" src="calculator.js"></script>
     <script>
 
         
 
-        let app = new Application('app');
+        let c1 = new Calculator('c1');
+        let c2 = new Calculator('c2');
 
 
     </script>
