--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Kata Calculator</title>
 </head>
 <body>
+
     <div id="c1">
 
     </div>
@@ -15,6 +16,7 @@
 
     </div>
 
+<screen onPromt=""></screen>
 
     <script lang="javascript" src="calculator.js"></script>
     <script>
